--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CraftedRealm - Minecraft Network</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-image: url('media/bg.jpeg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif; /* You can change the font as needed */
+            color: #333; /* Set text color to a suitable contrast with the background */
+        }
+    </style>
 </head>
 <body>
     <header>
