--- a/index.html
+++ b/index.html
@@ -7,14 +7,55 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background-image: url('media/bg.jpeg');
+            background-image: url('bg.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             margin: 0;
             padding: 0;
-            font-family: 'Arial', sans-serif; /* You can change the font as needed */
-            color: #333; /* Set text color to a suitable contrast with the background */
+            font-family: 'Arial', sans-serif;
+            color: #333;
+        }
+
+        header {
+            text-align: center;
+            padding: 30px;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #333;
+        }
+
+        section {
+            text-align: center;
+            padding: 50px 20px;
+        }
+
+        section h2 {
+            margin-bottom: 20px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #eee;
         }
     </style>
 </head>
@@ -24,7 +65,6 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <!-- Removed Servers and Forums links -->
                 <li><a href="http://shop.craftedrealm.net" target="_blank">Store</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -36,10 +76,6 @@
         <p>Explore our servers, engage in the community forums, and check out our store for exciting items.</p>
     </section>
 
-    <!-- Removed Servers section -->
-
-    <!-- Removed Forums section -->
-
     <section id="store">
         <h2>Online Store</h2>
         <p>Visit our online store to purchase exciting in-game items, ranks, and more!</p>
@@ -49,7 +85,6 @@
     <section id="contact">
         <h2>Contact Us</h2>
         <p>If you have any questions or concerns, feel free to contact us.</p>
-        <p>Email: contact@craftedrealm.com</p>
     </section>
 
     <footer>
