--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background-image: url('bg.jpeg');
+            background-image: url('main.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
