--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background-image: url('main.jpg');
+            background-image: url('bg.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
-            color: #333;
+            color: #fff; /* Set text color to white */
         }
 
         header {
@@ -24,6 +24,7 @@
 
         header h1 {
             margin: 0;
+            color: #fff; /* Set text color to white */
         }
 
         nav ul {
@@ -40,22 +41,17 @@
 
         nav a {
             text-decoration: none;
-            color: #333;
+            color: #fff; /* Set text color to white */
         }
 
         section {
             text-align: center;
             padding: 50px 20px;
+            color: #fff; /* Set text color to white */
         }
 
         section h2 {
             margin-bottom: 20px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #eee;
         }
     </style>
 </head>
@@ -66,7 +62,6 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="http://shop.craftedrealm.net" target="_blank">Store</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -81,15 +76,6 @@
         <p>Visit our online store to purchase exciting in-game items, ranks, and more!</p>
         <a href="http://shop.craftedrealm.net" target="_blank">Go to Store</a>
     </section>
-
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>If you have any questions or concerns, feel free to contact us.</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 CraftedRealm - Minecraft Network. All rights reserved.</p>
-    </footer>
 
     <script src="script.js"></script>
 </body>
